# crypto_bot

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  claude.md  config.example  config.template  config.txt
include/: config.h  engine.h  hft_engine.h  logger.h  order_book.h  order_manager.h  rest_client.h  risk_manager.h  strategy.h  websocket_client.h
include/core/: config.h  cpu_hints.h  logger.h  spsc_queue.h  types.h
include/data/: market_data.h  websocket_client.h
include/execution/: executor.h
include/metrics/: metrics.h
include/order/: order_manager.h
include/risk/: risk_manager.h
include/strategy/: market_maker.h
markdown/: april-phase1.md  april-phase2.md  april-phase3.md  april-phase4.md  april-phase5.md
src/: config.cpp  engine.cpp  hft_engine.cpp  hft_main.cpp  logger.cpp  main.cpp  order_book.cpp  order_manager.cpp  rest_client.cpp  risk_manager.cpp  strategy.cpp  websocket_client.cpp
src/core/: config.cpp  logger.cpp
src/data/: market_data_feed.cpp  websocket_client.cpp
src/execution/: executor.cpp
src/metrics/: metrics.cpp
src/order/: order_manager.cpp
src/risk/: risk_manager.cpp
src/strategy/: market_maker.cpp
tests/: smoke_test.cpp
